--- a/PaintProgram/PaintProgram/PaintProgram.vbproj
+++ b/PaintProgram/PaintProgram/PaintProgram.vbproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{77C52534-CE89-44C4-A21D-93C950F211B9}</ProjectGuid>
+    <ProjectGuid>{36B33C4C-C8D0-40C3-AA11-34ED0BEA4FA3}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <StartupObject>Tourist_Attractions_Program.My.MyApplication</StartupObject>
-    <RootNamespace>Tourist_Attractions_Program</RootNamespace>
-    <AssemblyName>Tourist Attractions Program</AssemblyName>
+    <StartupObject>PaintProgram.My.MyApplication</StartupObject>
+    <RootNamespace>PaintProgram</RootNamespace>
+    <AssemblyName>PaintProgram</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>WindowsForms</MyType>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
@@ -22,7 +22,7 @@
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\Debug\</OutputPath>
-    <DocumentationFile>Tourist Attractions Program.xml</DocumentationFile>
+    <DocumentationFile>PaintProgram.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -32,7 +32,7 @@
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DocumentationFile>Tourist Attractions Program.xml</DocumentationFile>
+    <DocumentationFile>PaintProgram.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
@@ -73,23 +73,11 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Attractions.Designer.vb">
-      <DependentUpon>Attractions.vb</DependentUpon>
-    </Compile>
-    <Compile Include="Attractions.vb">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="Form1.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.vb">
       <DependentUpon>Form1.vb</DependentUpon>
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form2.Designer.vb">
-      <DependentUpon>Form2.vb</DependentUpon>
-    </Compile>
-    <Compile Include="Form2.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
@@ -107,21 +95,10 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="Tourist_AttractionsDataSet.Designer.vb">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Tourist_AttractionsDataSet.xsd</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Attractions.resx">
-      <DependentUpon>Attractions.vb</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Form2.resx">
-      <DependentUpon>Form2.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
@@ -141,28 +118,9 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="App.config" />
-    <None Include="Tourist_AttractionsDataSet.xsc">
-      <DependentUpon>Tourist_AttractionsDataSet.xsd</DependentUpon>
-    </None>
-    <None Include="Tourist_AttractionsDataSet.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>Tourist_AttractionsDataSet.Designer.vb</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Tourist_AttractionsDataSet.xss">
-      <DependentUpon>Tourist_AttractionsDataSet.xsd</DependentUpon>
-    </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Best-places-to-explore-in-Arizona.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Hand-Luggage-Only-10-1.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Tourist Attractions.accdb">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <None Include="Resources\download %284%29.jfif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
