--- a/DrawingApp/DrawingApp.vbproj
+++ b/DrawingApp/DrawingApp.vbproj
@@ -96,6 +96,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="N-gon.vb" />
+    <Compile Include="PBox.vb" />
     <Compile Include="Polygon.vb" />
     <Compile Include="Rectangle.vb" />
     <Compile Include="Square.vb" />
@@ -122,6 +124,9 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Hand-Luggage-Only-10-1.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
